# advent_calendar

./: docker-compose.yml
advent_calendar-frontend/: docker-compose.yml  package-lock.json  package.json
advent_calendar-frontend/docker/application/: application.Dockerfile
advent_calendar-frontend/docker/tooling/: tooling.Dockerfile
advent_calendar-frontend/public/: index.html
advent_calendar-frontend/src/: App.vue  main.ts  shims-vue.d.ts
advent_calendar-http/: Cargo.toml
advent_calendar-http/docker/application/: application.Dockerfile
advent_calendar-http/src/: main.rs  routes.rs  winners.rs
