[package]
name = "advent_calendar-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
actix-cors = "0.6.0-beta.6"
futures = "*"
scraper = "*"
serde = "*"
reqwest = "*"
mime = "*"
